<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/light_gray"

    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_gray"
        android:paddingTop="10dp"
        android:orientation="horizontal">

    <ImageView
        android:id="@+id/device_icon"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp"
        android:src="@drawable/beacon"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">



        <GridLayout
            android:id="@+id/ibeacon_section"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_gray"
            android:columnCount="4">

            <!-- ROW 1 -->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="5dp"
                android:text="@string/label_uuid"
                android:textSize="12sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/ibeacon_uuid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnSpan="3"
                android:paddingRight="5dp"
                android:textSize="12sp"/>

            <!-- ROW 2 -->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="5dp"
                android:text="@string/label_major"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ibeacon_major"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="5dp"
                android:textSize="12sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/label_minor"
                android:textSize="12sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/ibeacon_minor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="5dp"
                android:textSize="12sp"/>

            <!-- ROW 3 -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:paddingRight="5dp"
                android:text="@string/label_distance"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ibeacon_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="5dp"
                android:textSize="12sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="5dp"
                android:paddingLeft="7dp"
                android:text="@string/label_rssi"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ibeacon_rssi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="5dp"
                android:textSize="12sp"/>

            <!-- ROW 4 -->
            <TextView
                android:id="@+id/ibeacon_distance_descriptor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnSpan="3"
                android:paddingRight="5dp"
                android:textSize="12sp"/>
        </GridLayout>

    </LinearLayout>

    </LinearLayout>
    <View
        android:id="@+id/upperSepparator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colortext" />

</LinearLayout>